<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/imagem"
            android:src="@mipmap/logomarca_salt" />

        <TextView
            android:id="@+id/text_telefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/telefone"
            android:textColor="@color/text_color" />

        <!--         <EditText -->
        <!--             android:id="@+id/editText_unidade" -->
        <!--             android:layout_width="wrap_content" -->
        <!--             android:layout_height="wrap_content" -->
        <!--             android:layout_alignParentLeft="true" -->
        <!--             android:layout_alignParentRight="true" -->
        <!--             android:layout_below="@+id/text_telefone" -->
        <!--             android:layout_centerHorizontal="true" -->
        <!--             android:layout_marginTop="@dimen/margin_20" -->
        <!--             android:background="@drawable/edit_text_login" -->
        <!--             android:hint="@string/unidade_setor" -->
        <!--             android:inputType="number" -->
        <!--             android:maxLength="2" -->
        <!--             android:padding="@dimen/margin_10" -->
        <!--             android:textColorHint="@color/color_hint" /> -->

        <Spinner
            android:id="@+id/editText_unidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_telefone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_20"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/text_color"
            android:textColorHint="@color/color_hint" >
        </Spinner>

        <EditText
            android:id="@+id/editText_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText_unidade"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/edit_text_login"
            android:hint="@string/usuario"
            android:inputType="text"
            android:padding="@dimen/margin_10"
            android:textColor="@color/text_color"
            android:textColorHint="@color/color_hint" />

        <EditText
            android:id="@+id/editText_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/editText_usuario"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/edit_text_login"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="@dimen/margin_10"
            android:password="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/color_hint" />

        <TextView
            android:id="@+id/text_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText_senha"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/ip"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/button_entrar"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/text_ip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/entrar" />
    </RelativeLayout>

</RelativeLayout>